2008-09-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:94
	* bindings/cxx/entry.cpp: Use <cstring> instead of <string>.  Patch from
	Matt.

2008-09-18   D. V. Wiebe <getdata@ketiltrout.net>  svn:90
	* src/legacy.c (_GD_GetDirfile), test/legacy_get_rofs.c,
	test/legacy_get_put.c: Open dirfiles read-only unless called via PutData().
	Re-open read-only dirfile read-write when necessary.  Added two test-cases
	for same.

	* test/Makefile.am: Conditionally compile legacy tests.

2008-09-15   D. V. Wiebe <getdata@ketiltrout.net>  svn:86
	* src/errors.c: Fix GD_E_RAW_IO error string.

2008-09-15   D. V. Wiebe <getdata@ketiltrout.net>
	Getdata-0.3.0 released.

2008-09-05   D. V. Wiebe <getdata@ketiltrout.net>  svn:77
	* m4/c99.m4 configure.ac Makefile.am: Re-implement AC_PROG_CC_C99 as
	GD_PROG_CC_C99 to fix `deprecated -c99' warning with icc.

	* bindings/cxx/dirfile.h bindings/cxx/entry.h bindings/cxx/test/getdata.cpp
	bindings/cxx/test/putdata.cpp bindings/f77/fgetdata.h
	test/convert_float32_float64.c test/convert_float32_int16.c
	test/convert_float32_int32.c test/convert_float32_int64.c
	test/convert_float32_int8.c test/convert_float32_uint16.c
	test/convert_float32_uint32.c test/convert_float32_uint64.c
	test/convert_float32_uint8.c test/convert_float64_float32.c
	test/convert_int16_float32.c test/convert_int16_float64.c
	test/convert_int16_int32.c test/convert_int16_int64.c
	test/convert_int16_int8.c test/convert_int16_uint16.c
	test/convert_int16_uint32.c test/convert_int16_uint64.c
	test/convert_int16_uint8.c test/convert_int32_float32.c
	test/convert_int32_float64.c test/convert_int64_float32.c
	test/convert_int64_float64.c test/convert_int8_float32.c
	test/convert_int8_float64.c test/convert_int8_int16.c
	test/convert_int8_int32.c test/convert_int8_int64.c
	test/convert_int8_uint16.c test/convert_int8_uint32.c
	test/convert_int8_uint64.c test/convert_int8_uint8.c
	test/convert_uint16_float32.c test/convert_uint16_float64.c