@@ -20,7 +20,7 @@
 #
 AUTOMAKE_OPTIONS = foreign
 INCLUDES = -Wall -I$(srcdir)/.. -I$(top_srcdir)/src -D__TEST__=\"$@\"
-LDADD=../libdirfile.la
+LDADD=../libgetdata++.la
 TESTS=entry getdata nframes putdata spf
 
 entry_SOURCES=entry.cpp
